<resources>
    <string name="app_name">AVNutritie</string>
    <string name="title_activity_gg2">Sign in</string>

    <string name="prompt_email">Email</string>
    <string name="Logout">Logout</string>
    <string name="sign_in_text">Don\'t have an account? Sign up here</string>
    <string name="login_email">Enter your email</string>
    <string name="login_button">Login</string>
    <string name="login_password">Password - minimum 8 characters</string>
    <string name="login_text">Please use your email and password for login</string>
    <string name="register_already">Already registered? Sign in here</string>
    <string name="email_register">Please enter your email address</string>
    <string name="password_register">Password</string>
    <string name="register_text">"Please register in order to use the app"</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="food_intake">Enter your food intake</string>
    <string name="quantity">Quantity - write your own measure units</string>
    <string name="save_button">Save</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="button_register">Register</string>
    <string name="save_password_and_email">Save my username and password</string>
    <string name="jurnalul_meu">Jurnalul Meu</string>
    <array name="TipulMesei">

        <item>Breakfast</item>
        <item>Morning Snack</item>
        <item>Lunch</item>
        <item>Evening Snack</item>
        <item>Dinner</item>
    </array>
</resources>
