<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gg.matei.avnutrition.gg3">

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="587dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="5dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:text="@string/login_text"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#9E49D6"/>

        <EditText
            android:id="@+id/email_login"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="@string/login_email"/>

        <EditText
            android:id="@+id/password_login"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/login_password"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button" />

        <TextView
            android:id="@+id/sing_up_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_text"
            android:textAlignment="center"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
