<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gg.matei.avnutrition.gg2">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="2dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:text="@string/register_text"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#1CB92A"
            android:textSize="17dp"
            tools:text="@string/register_text" />

        <EditText
            android:id="@+id/emailregister"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:ems="10"
            android:hint="@string/email_register"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordregister"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:ems="10"
            android:hint="@string/password_register"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:text="Register
" />

        <TextView
            android:textAlignment="center"
            android:id="@+id/textalreadysign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_already" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>


